# mailos

./: .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  app.py  check_emails.py  docker-compose.yml  pyproject.toml  pytest.ini  reply.py  requirements.txt  setup.cfg
.github/workflows/: docs.yml  test.yml
docs/: Makefile  conf.py  configuration.rst  index.rst  installation.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/guides/: adding_vendors.doctree
docs/_build/html/: .buildinfo  configuration.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: configuration.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/_build/html/.doctrees/api/: modules.doctree
docs/_build/html/_sources/: configuration.rst.txt  quickstart.rst.txt
docs/_build/html/_sources/api/: modules.rst.txt
docs/_build/html/api/: modules.html
docs/_build/html/guides/: adding_vendors.html
docs/api/: modules.rst  tools.rst
docs/guides/: adding_vendors.rst  tools.rst
e2e/: .env.examples  Dockerfile  Dockerfile.e2e  config_example.json  docker-compose.yml  docker-entrypoint.sh
src/mailos/: __init__py  app.py  check_emails.py  reply.py
src/mailos/tools/: README.md  __init__.py  arxiv_tool.py  bash_command.py  csv_tool.py  email_review_tool.py  email_tool.py  pdf_tool.py  planner.py  python_interpreter.py  weather.py  web_search.py
src/mailos/ui/: __init__.py  actions.py  checker_form.py  checker_list.py  controls.py  display.py  settings_form.py  task_form.py
src/mailos/utils/: attachment_utils.py  auth_utils.py  config_utils.py  display_utils.py  email_utils.py  logger_utils.py  prompt_utils.py  reply_utils.py  task_utils.py
src/mailos/vendors/: __init__.py  anthropic_llm.py  base.py  bedrock_anthropic_llm.py  config.py  factory.py  models.py  openai_llm.py
tests/: __init__.py  conftest.py  test_attachments.py  test_reply.py
tests/tools/: test_arxiv_tool.py  test_bash_command.py  test_csv_tool.py  test_email_review_tool.py  test_email_tool.py  test_pdf_tool.py  test_planner.py  test_python_interpreter.py  test_weather.py  test_web_search.py
tests/vendors/: test_bedrock_anthropic_llm.py
ui/: actions.py  checker_form.py  checker_list.py  controls.py  display.py
utils/: config_utils.py  display_utils.py  logger_utils.py
vendors/: anthropic_llm.py  base.py  bedrock_anthropic.py  factory.py  models.py  openai_llm.py
